trunk/Archive2/cf/7b16262a943a10/output
main.cpp: In function 'int main(int, char**)':
main.cpp:15:27: error: call to non-constexpr function 'const int BAND_FIELD1(int)'
         case BAND_FIELD1(B):
                           ^
main.cpp:15:27: error: call to non-constexpr function 'const int BAND_FIELD1(int)'
